# py-cli-boilerplate

./: .pre-commit-config.yaml  .pytest.toml  .ruff.toml  README.md  mypy.ini  pyproject.toml  ruff.toml  ty.toml
.github/workflows/: build.yml  ci.yml  dependabot-auto-merge.yml  pypi-publish.yml
hooks/: pre-commit
src/myprogram/: __init__.py  cli.py
src/py_cli_boilerplate/: cli.py  logger.py
src/pycliboilerplate/: __init__.py  cli.py  logger.py
tests/: test_cli.py
