[build-system]
requires = [
    "hatchling",
    "hatch-vcs",
]
build-backend = "hatchling.build"

[project]
name = "pycliboilerplate"
dynamic = ["version"]
description = "A minimal Python CLI boilerplate template"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Justus Rijke"}]
requires-python = ">=3.10"
dependencies = [
    "click",
    "colorlog",
]

[project.urls]
Homepage = "https://github.com/JustusRijke/py-cli-boilerplate"
Issues = "https://github.com/JustusRijke/py-cli-boilerplate/issues"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
]

[project.scripts]
pycliboilerplate = "pycliboilerplate:main"

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
local_scheme = "no-local-version"

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
extend-select = ["I"] # Sort imports