[build-system]
requires = [
    "hatchling",
    "hatch-vcs",
]
build-backend = "hatchling.build"

[project]
name = "py-cli-boilerplate"
dynamic = ["version"]
description = "An opinionated Python CLI boilerplate template for GitHub-hosted projects."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{name = "Justus Rijke", email="justusrijke@gmail.com"}]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 4 - Beta",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Typing :: Typed",
]
dependencies = [
    "click",
]

[project.urls]
Homepage = "https://github.com/JustusRijke/py-cli-boilerplate"
Issues = "https://github.com/JustusRijke/py-cli-boilerplate/issues"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "mypy",
]

[project.scripts]
py-cli-boilerplate = "py_cli_boilerplate:invoke"

[tool.hatch.build.targets.wheel]
packages = ["src/py_cli_boilerplate"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
local_scheme = "no-local-version"

[tool.mypy]
disable_error_code = ["import-untyped", "import-not-found"]
strict=true
disallow_any_explicit=true

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
extend-select = ["I"] # Sort imports