[build-system]
requires = [
    "hatchling",
    "hatch-vcs",
]
build-backend = "hatchling.build"

[project]
name = "py-cli-boilerplate"
dynamic = ["version"]
description = "An opinionated Python CLI boilerplate template for GitHub-hosted projects."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{name = "Justus Rijke", email="justusrijke@gmail.com"}]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 4 - Beta",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Typing :: Typed",
]
dependencies = [
    "click>=8.1",
]

[project.urls]
Homepage = "https://github.com/JustusRijke/py-cli-boilerplate"
Issues = "https://github.com/JustusRijke/py-cli-boilerplate/issues"

[dependency-groups]
dev = [
    "pytest>=9",
    "pytest-cov>=6",
    "ruff>=0.10",
    "mypy>=1.0.0",
]

[project.scripts]
py-cli-boilerplate = "py_cli_boilerplate:invoke"

[tool.coverage.run]
omit = ["tests/*"]

[tool.hatch.build.targets.wheel]
packages = ["src/py_cli_boilerplate"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
local_scheme = "no-local-version"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov --cov-branch --cov-report=term-missing --cov-report=html --cov-report=xml"

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
extend-select = ["I"] # Sort imports